--- a/src/index.css
+++ b/src/index.css
@@ -4,20 +4,23 @@
 
 body {
   margin: 0;
-  font-family: 'Fira Code', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Fira Code", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #1c1f20;
+  background-color: var(--body-bg-color);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-h1,a,li,p {
+h1,
+a,
+li,
+p {
   margin-left: 6px;
 }
 
@@ -30,7 +33,6 @@ section {
   text-decoration-thickness: 0.1rem;
 }
 
-
 .section-body {
   min-height: 100vh;
   display: flex;
@@ -39,4 +41,32 @@ section {
 
 footer {
   margin-top: auto;
+}
+
+:root {
+  --body-bg-color: #ffffff;
+  --body-bg-color-inverted: #1c1f20;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --body-bg-color: #1c1f20;
+    --body-bg-color-inverted: #ffffff;
+  }
+}
+
+body.dark {
+  --body-bg-color: #1c1f20;
+  --body-bg-color-inverted: #ffffff;
+}
+
+body.light {
+  --body-bg-color: #ffffff;
+  --body-bg-color-inverted: #1c1f20;
+}
+
+.svg {
+  fill: none;
+  stroke-width: 1.5;
+  stroke: var(--body-bg-color-inverted);
 }
